[package]
name = "sandbox"
version = "1.0.0"
authors = ["Michael Davidsaver <mdavidsaver@gmail.com>"]
edition = "2021"
license = "GPL-3"
description = "Lightweight partial Linux containers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0"

[dependencies]
libc = "0.2"
signal-hook = "0.3"
log = { version = "0.4", features = ["std"] }

[profile.squeeze]
inherits = "release"
# optimize for small code size
opt-level = "s"
# link time optimization
lto = true
# avoid unwinding machinary
# libunwind still linked.  cf. https://github.com/rust-lang/rust/issues/79609
panic = 'abort'
# keep runtime safety checks
overflow-checks = true
